@@ -1,10 +1,8 @@
-# Add debtags tags to the index
+# Add origin tags to the index
 
 import apt
 import re
 import os
-
-
 
 class OriginPlugin:
     def info(self):
