@@ -47,6 +47,8 @@ setup(name="software-center", version=VERSION,
                    glob.glob("data/images/*.png")),
                   ('share/software-center/icons/',
                    glob.glob("data/emblems/*.png")),
+                  ('share/apt-xapian-index/plugins',
+                   glob.glob("apt-xapian-index-plugin/*.py")),
                   ],
       cmdclass = { "build" : build_extra.build_extra,
                    "build_i18n" :  build_i18n.build_i18n,
